Tkenization and Encryption optimized